--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -45,6 +45,18 @@ jobs:
       - name: 🎉 Get latest code
         uses: actions/checkout@v2
 
+      - name: Rename ENV...
+        run: |
+          mv .env.example .env
+
+      # ----------------------------------------------------------------------
+      # ----------------------------------------------------------------------
+      # ----------------------------------------------------------------------
+
+      - name: Manual Replace
+        run: |
+          sed -i 's#DATABASE_URL=#DATABASE_URL=${{ secrets.ENV_DATABASE_URL }}#g' .env
+
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
